--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -69,10 +69,9 @@
     </form>
 </div-->
 
-
-
-<div class="caixa-bottom">
+<footer class="caixa-bottom">
     <span class="texto-bottom align-middle">Não perca tempo e junte-se ao nosso time</span>
-</div>
+</footer>
+
 </body>
 </html>
