--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -36,8 +36,7 @@
 
             <!-- success message -->
             <div th:if="${param.success}">
-                <div class="alert alert-info">You've successfully registered
-                    to our awesome app!
+                <div class="alert alert-info">Cadastro realizado com sucesso!
                 </div>
             </div>
 
