--- a/src/main/resources/templates/perfil.html
+++ b/src/main/resources/templates/perfil.html
@@ -56,12 +56,12 @@
               <p>Conversor Monetário</p>
             </a>
           </li>
-          <li class="active">
-            <a th:href="@{/perfis}">
-              <i class="now-ui-icons users_single-02"></i>
-              <p>Perfis</p>
-            </a>
-          </li>
+<!--          <li class="active">-->
+<!--            <a th:href="@{/perfis}">-->
+<!--              <i class="now-ui-icons users_single-02"></i>-->
+<!--              <p>Perfis</p>-->
+<!--            </a>-->
+<!--          </li>-->
           <li>
             <a th:href="@{/relatorio}">
               <i class="now-ui-icons files_paper"></i>
