--- a/src/main/resources/templates/despesa.html
+++ b/src/main/resources/templates/despesa.html
@@ -471,53 +471,53 @@
   <div class="printable d-none d-print-block">
     <div class="content">
       <div class="row">
-        <div class="col-3">
-          <div class="card card-chart">
-            <div class="card-header">
-              <h5 class="card-category">Despesas</h5>
-              <h4 class="card-title">Fixas</h4>
-            </div>
-            <div class="card-body">
-              <h3>R$ <span th:text="${despesas.totalFixas}"></span></h3>
-            </div>
-          </div>
-        </div>
+<!--        <div class="col-3">-->
+<!--          <div class="card card-chart">-->
+<!--            <div class="card-header">-->
+<!--              <h5 class="card-category">Despesas</h5>-->
+<!--              <h4 class="card-title">Fixas</h4>-->
+<!--            </div>-->
+<!--            <div class="card-body">-->
+<!--              <h3>R$ <span th:text="${despesas.totalFixas}"></span></h3>-->
+<!--            </div>-->
+<!--          </div>-->
+<!--        </div>-->
 
-        <div class="col-3">
-          <div class="card card-chart">
-            <div class="card-header">
-              <h5 class="card-category">Despesas</h5>
-              <h4 class="card-title">Variáveis</h4>
-            </div>
-            <div class="card-body">
-              <h3>R$ <span th:text="${despesas.totalVariaveis}"></span></h3>
-            </div>
-          </div>
-        </div>
+<!--        <div class="col-3">-->
+<!--          <div class="card card-chart">-->
+<!--            <div class="card-header">-->
+<!--              <h5 class="card-category">Despesas</h5>-->
+<!--              <h4 class="card-title">Variáveis</h4>-->
+<!--            </div>-->
+<!--            <div class="card-body">-->
+<!--              <h3>R$ <span th:text="${despesas.totalVariaveis}"></span></h3>-->
+<!--            </div>-->
+<!--          </div>-->
+<!--        </div>-->
 
-        <div class="col-3">
-          <div class="card card-chart">
-            <div class="card-header">
-              <h5 class="card-category">Despesas</h5>
-              <h4 class="card-title">Extraordinárias</h4>
-            </div>
-            <div class="card-body">
-              <h3>R$ <span th:text="${despesas.totalExtraordinarias}"></span></h3>
-            </div>
-          </div>
-        </div>
+<!--        <div class="col-3">-->
+<!--          <div class="card card-chart">-->
+<!--            <div class="card-header">-->
+<!--              <h5 class="card-category">Despesas</h5>-->
+<!--              <h4 class="card-title">Extraordinárias</h4>-->
+<!--            </div>-->
+<!--            <div class="card-body">-->
+<!--              <h3>R$ <span th:text="${despesas.totalExtraordinarias}"></span></h3>-->
+<!--            </div>-->
+<!--          </div>-->
+<!--        </div>-->
 
-        <div class="col-3">
-          <div class="card card-chart">
-            <div class="card-header">
-              <h5 class="card-category">Despesas</h5>
-              <h4 class="card-title">Regulares</h4>
-            </div>
-            <div class="card-body">
-              <h3>R$ <span th:text="${despesas.totalRegulares}"></span></h3>
-            </div>
-          </div>
-        </div>
+<!--        <div class="col-3">-->
+<!--          <div class="card card-chart">-->
+<!--            <div class="card-header">-->
+<!--              <h5 class="card-category">Despesas</h5>-->
+<!--              <h4 class="card-title">Regulares</h4>-->
+<!--            </div>-->
+<!--            <div class="card-body">-->
+<!--              <h3>R$ <span th:text="${despesas.totalRegulares}"></span></h3>-->
+<!--            </div>-->
+<!--          </div>-->
+<!--        </div>-->
 
         <div class="col-md-12">
           <div class="card ">
